[package]
name = "sol-wap"
version = "0.1.0"
authors = ["Conner <ConnerNGallagher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sol_wap"
path = "src/lib/lib.rs"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"
chrono = "0.4"
solana-client = "1.7.1"
solana-sdk = "1.7.1"
solana-program = "1.7.1"
solana-transaction-status = "1.7.1"
pyth-client = "0.2.0"
progress_bar = "0.1.3"
arr_macro = "0.1.3"
dialoguer = "0.8.0"